add versions route
